--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ opencv-python>=4.5.0
 numpy>=1.21.0
 Pillow>=8.3.0
 tqdm>=4.62.0
-ultralytics>=8.0.0
+ultralytics>=8.0.0,<8.1.0
 matplotlib>=3.5.0
 seaborn>=0.11.0 
